--- a/Style/effects/_about.scss
+++ b/Style/effects/_about.scss
@@ -282,10 +282,13 @@
         .contact-info{
           transition: opacity 1s linear 1s;
           opacity: 1;
+          padding-left: 5px;
         }
         .links{
           transition: opacity 1s linear 1s;
           opacity: 1;
+          font-style: italic;
+          text-decoration: underline;
         }
       }
     }
