--- a/Style/effects/_projects.scss
+++ b/Style/effects/_projects.scss
@@ -301,12 +301,12 @@
   top: 0;
   width: 30px;
   height: 30px;
-  background-image: url(../../assets/Xclose.png);
+  background-image: url(../assets/Xclose.png);
   background-size: cover;
   border: 0.5px solid $primary-color;
   border-radius: 10px;
   &:hover{
-    background-image: url(../../assets/Xclose-red.png);
+    background-image: url(../assets/Xclose-red.png);
     border: 0.5px solid rgb(255, 0, 0);
     border-radius: 10px;
   }
